<resources>
    <string name="a_e_k">713b364e8ae07e3a</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_version">2.4.0</string>
    <string name="activities_no_data">暂无任何新的活动</string>
    <string name="activities_over">活动已结束</string>
    <string name="activities_processing">活动进行中</string>
    <string name="activities_to_be_done">活动未开启</string>
    <string name="ad_sub_title">推广评分  %1$s</string>
    <string name="aijimi_key">B5905BC76C7540C9DF17E915BAEC5CC4756C097D3FF8415A3F9544972D9AE30AF976B6733BF5FE3EA7A758336C7398C59EBEB275E3A5BEA1F76B31E6C4CD48CA067A0F6FF7C2A55CC9DCC68669FB8316B0822C8825D853F766A7D8DDB3D8469F5D18B17B49A082DF746223EB09EB9050E648</string>
    <string name="ali_app_key">06cd0220-2b46-482d-9d51-58bab113d9cb</string>
    <string name="app_name">运动世界校园</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">申请</string>
    <string name="appreciate">获赞</string>
    <string name="article_no_data">暂无任何新的文章</string>
    <string name="attendance_bottom_tip">说明：1.考勤期间请勿关闭程序，并保持蓝牙开启。2.请在有效区域内进行考勤签到。3.考勤有效时间至少达到%1$d分钟，计入一次有效出勤</string>
    <string name="attendance_not_close_tip">在打卡时间段内请勿关闭程序,\10否则将无法正常打卡</string>
    <string name="attendance_not_over_time">未到考勤时间</string>
    <string name="attendance_not_valid">您的签到时长未到 %1$d 分钟，本次考勤将视为无效，是否继续签退</string>
    <string name="attendance_range_in">已进入签到范围</string>
    <string name="attendance_range_out">未进入签到范围</string>
    <string name="attendance_sign_checked">考勤开始时间 %1$s</string>
    <string name="attendance_sign_checking">考勤开始时间 %1$s</string>
    <string name="attendance_sign_in_time">签到时间 %1$s</string>
    <string name="attendance_sign_out_checked">考勤结束时间 %1$s</string>
    <string name="attendance_sign_out_checking">考勤结束时间 %1$s</string>
    <string name="attendance_sign_out_time">签退时间 %1$s</string>
    <string name="attendance_time_out">已过考勤时间</string>
    <string name="attendance_valid_time">签到时长: %1$d分钟</string>
    <string name="banner_txt_1">奔跑·遇见不同的风景</string>
    <string name="base_venue_url">http://h5.gxapp.iydsj.com</string>
    <string name="before_min">%1$d分钟前</string>
    <string name="before_second">%1$d秒前</string>
    <string name="begin_time">%1$s开始</string>
    <string name="bj_union_tip_url">https://gxapp-h5.oss-cn-shanghai.aliyuncs.com/gxapp/tips/index.html</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call">呼叫</string>
    <string name="campus_list">院系列表</string>
    <string name="cancel">取消</string>
    <string name="cancel_oprate">取消操作</string>
    <string name="cancel_oprate_attendance">您确定取消本次考勤操作么？</string>
    <string name="change_bg">别忘了，点击更换背景图</string>
    <string name="change_concern">换一批推荐</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">私信</string>
    <string name="cheat_xposed_check">哒哒哒~要卸载手机里的Xposed框架或者软件才能开始跑步哦。</string>
    <string name="check_attendance">考勤点名</string>
    <string name="check_update">检查更新</string>
    <string name="checking">校验中…</string>
    <string name="choose_course">选择课程班级</string>
    <string name="choose_teacher">选择授课老师</string>
    <string name="clause_text1">尊敬的用户，您好：\10欢迎您使用运动世界网服务！</string>
    <string name="close_match_dialog">关闭后，将不能匹配ta的运动心情</string>
    <string name="close_share_dialog">关闭后,本次跑步将不能发布“运动心情”咯</string>
    <string name="code">%1$s</string>
    <string name="comment_copy_success">复制成功</string>
    <string name="comment_hint_2_user">回复 %1$s：</string>
    <string name="comment_hint_normal">我也来说两句…</string>
    <string name="comment_parent">%1$s：%2$s</string>
    <string name="comment_parent_deleted">该评论已不存在</string>
    <string name="comment_post_fail">发布失败</string>
    <string name="comment_post_success">发布成功</string>
    <string name="comment_report_advertising">垃圾广告、推销</string>
    <string name="comment_report_fail">举报失败</string>
    <string name="comment_report_other">其他</string>
    <string name="comment_report_success">举报成功</string>
    <string name="comment_report_unfriendly">不友善行为（色情、辱骂等）</string>
    <string name="comment_sub_title">%1$s  %2$s</string>
    <string name="comment_success">评论成功</string>
    <string name="commerce_url">http://welfare.club.iydsj.com</string>
    <string name="company">浙江万航信息科技有限公司</string>
    <string name="complete">已完成</string>
    <string name="concern">关注</string>
    <string name="concern_no_data">暂无任何新的关注</string>
    <string name="contract_us">联系客服</string>
    <string name="copy">复制兑换码</string>
    <string name="copy_success">复制成功</string>
    <string name="courselist_error">获取课程列表失败，正在重试~</string>
    <string name="create_confirming">正在创建…</string>
    <string name="create_room">发起约跑</string>
    <string name="date">日期</string>
    <string name="day_rank">当日排名</string>
    <string name="db_key">756KKPKRT78jhgJ</string>
    <string name="db_name">sports.db</string>
    <string name="db_version">46</string>
    <string name="default_cache_size">0.0M</string>
    <string name="default_kilometer">0.00</string>
    <string name="default_speed">0\'00\"</string>
    <string name="default_step">0</string>
    <string name="default_time">00:00:00</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="depart">院系</string>
    <string name="depart2">院系名称</string>
    <string name="depart_participate_num">共%1$d人参与</string>
    <string name="due_run_complete">结束了奔跑</string>
    <string name="due_run_end_pass_uncomplete">跑步未完成, 请不要偷懒哟</string>
    <string name="due_run_no_location">你的位置还未确定,无法发起约跑,请等待定位结果！</string>
    <string name="due_run_uncomplete">未完成奔跑</string>
    <string name="dynamic_dis_publish">不发了</string>
    <string name="dynamic_empty">动态空空如也\10骚年，还不快去抢占沙发</string>
    <string name="dynamic_empty_not_publish">动态空空如也</string>
    <string name="dynamic_myself">您暂无任何新动态，快去参加话题发表新动态</string>
    <string name="dynamic_other">TA暂无任何新动态</string>
    <string name="dynamic_publishing">正在发布…</string>
    <string name="dynamic_top_all">全部</string>
    <string name="dynamic_top_attention">关注</string>
    <string name="dynamic_top_hot">热门</string>
    <string name="dynamic_top_school">同校</string>
    <string name="dynamic_wait_2_publish">再看看</string>
    <string name="emoji_hint_normal">此刻想说些什么…</string>
    <string name="empty" />
    <string name="empty_message_comment">暂无任何新的评论</string>
    <string name="empty_message_like">暂无任何新的点赞</string>
    <string name="emulator_key">SWCampus2017DDY_</string>
    <string name="entering">正在加入…</string>
    <string name="entrance_year">入学年份</string>
    <string name="fans">粉丝</string>
    <string name="fans_no_data">暂无任何新的粉丝</string>
    <string name="find">发现</string>
    <string name="find_detail">内容详情</string>
    <string name="find_detail_content_bottom">阅读 %1$d · 赞赏 %2$d</string>
    <string name="find_detail_sub_title">作者：%1$s    %2$s</string>
    <string name="find_item_activity">活动中心</string>
    <string name="find_item_article">文章阅读</string>
    <string name="find_item_topic">话题讨论</string>
    <string name="find_list_item_read">阅读：%1$d</string>
    <string name="find_new">系统检测到\10运动世界校园已更新到%1$s版本</string>
    <string name="finish_bind">完成注册</string>
    <string name="folder_all">所有照片</string>
    <string name="full">已满员</string>
    <string name="geet_deep_konw_id">214aecc40143ed5b69072dc89644d4cd</string>
    <string name="get_extra_fail">数据出现异常</string>
    <string name="gift_url_error">未获取到兑换链接</string>
    <string name="gift_validity_time">有效期 %1$s至%2$s</string>
    <string name="give_up">放弃</string>
    <string name="gradeClass">班级</string>
    <string name="grades_end_time">成绩统计截止到昨日23:59</string>
    <string name="gt3_geetest_analyzing">Analysing...</string>
    <string name="gt3_geetest_checking">Intelligent Verification</string>
    <string name="gt3_geetest_click">Please click captcha button</string>
    <string name="gt3_geetest_closed">Closed</string>
    <string name="gt3_geetest_http_error">Network Faliure</string>
    <string name="gt3_geetest_http_timeout">Network Timeout</string>
    <string name="gt3_geetest_pass">Success</string>
    <string name="gt3_geetest_please_verify">Please complete verification</string>
    <string name="gt3_geetest_success">Success</string>
    <string name="gt3_geetest_support">Geetest provides technical support</string>
    <string name="hint_campus">校区</string>
    <string name="hint_input_psw">请输入6–12位数字或字母的密码</string>
    <string name="hint_name">姓名</string>
    <string name="hint_phone_number">请输入11位手机号</string>
    <string name="hint_psw">密码</string>
    <string name="hint_school_num">学号</string>
    <string name="hint_sex">性别</string>
    <string name="hint_user_name">学号/手机号</string>
    <string name="hint_ver_code">验证码</string>
    <string name="login">登录</string>
    <string name="register">创建账号</string>
    <string name="sure_userinfo_title">请确认以下个人信息是否正确</string>
    <string name="txt_check_network">请检查您的网络设置</string>
    <string name="txt_draw_prize">点击抽奖</string>
    <string name="txt_forget_psw">忘记密码?</string>
    <string name="txt_get_draw_chance">恭喜您，获得一次抽奖机会</string>
    <string name="txt_get_random_gift">本次跑步经过的点位发现了一个随机奖品礼盒</string>
    <string name="txt_get_ver_code">获取验证码</string>
    <string name="txt_next">下一步</string>
    <string name="txt_protocol">创建账户, 即表明你阅读并同意%1$s条款</string>
    <string name="txt_register">欢迎加入运动世界</string>
    <string name="txt_reload">重新加载</string>
    <string name="txt_request_failure">网络请求失败</string>
    <string name="txt_run_young">用奔跑·释青春</string>
    <string name="txt_sure">确认</string>
    <string name="txt_welcome">欢迎来到运动世界</string>
</resources>