<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/s_70">
        <ImageView android:id="@+id/iv_cancel" android:layout_width="@dimen/s_40" android:layout_height="@dimen/s_40" android:layout_marginTop="@dimen/s_22" android:layout_marginRight="@dimen/s_2" android:src="@mipmap/img_cancel" android:scaleType="centerInside" android:layout_alignParentRight="true" android:contentDescription="@string/app_name"/>
    </RelativeLayout>
    <TextView android:textSize="@dimen/t_25" android:textStyle="bold" android:textColor="@color/text_color_major" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/s_25" android:text="@string/txt_register"/>
    <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/s_25" android:layout_marginTop="@dimen/s_15" android:text="@string/txt_run_young"/>
    <RelativeLayout android:paddingLeft="@dimen/s_25" android:paddingRight="@dimen/s_25" android:layout_width="match_parent" android:layout_height="@dimen/s_60" android:layout_marginTop="@dimen/s_5">
        <EditText android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:textColorHint="@color/text_color_hint" android:id="@+id/edt_phone_number" android:background="@null" android:paddingTop="@dimen/s_5" android:paddingBottom="@dimen/s_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/s_5" android:hint="@string/hint_phone_number" android:singleLine="true" android:maxLength="20" android:layout_alignParentBottom="true" android:inputType="phone" style="?android:attr/textViewStyle"/>
        <View android:layout_alignParentBottom="true" style="@style/horizontal_line"/>
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="@dimen/s_25" android:paddingRight="@dimen/s_25" android:layout_width="match_parent" android:layout_height="@dimen/s_60" android:layout_marginTop="@dimen/s_5">
        <EditText android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:textColorHint="@color/text_color_hint" android:id="@+id/edt_ver_code" android:background="@null" android:paddingTop="@dimen/s_5" android:paddingBottom="@dimen/s_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/s_5" android:layout_marginBottom="@dimen/s_5" android:hint="@string/hint_ver_code" android:singleLine="true" android:maxLength="10" android:layout_toLeftOf="@+id/tv_get_ver_code" android:layout_alignParentBottom="true" android:inputType="number" style="?android:attr/textViewStyle"/>
        <View android:layout_marginRight="@dimen/s_10" android:layout_toLeftOf="@+id/tv_get_ver_code" android:layout_alignParentBottom="true" style="@style/horizontal_line"/>
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_color_major" android:gravity="center" android:id="@+id/tv_get_ver_code" android:background="@drawable/shape_solid_stroke_b2" android:layout_width="@dimen/s_90" android:layout_height="@dimen/s_35" android:text="@string/txt_get_ver_code" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="@dimen/s_25" android:paddingRight="@dimen/s_25" android:layout_width="match_parent" android:layout_height="@dimen/s_60" android:layout_marginTop="@dimen/s_5">
        <EditText android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:textColorHint="@color/text_color_hint" android:id="@+id/edt_psw" android:background="@null" android:paddingTop="@dimen/s_5" android:paddingBottom="@dimen/s_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/s_5" android:hint="@string/hint_input_psw" android:singleLine="true" android:maxLength="20" android:layout_alignParentBottom="true" android:inputType="textPassword" style="?android:attr/textViewStyle"/>
        <View android:layout_alignParentBottom="true" style="@style/horizontal_line"/>
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_color_hint" android:gravity="center" android:id="@+id/tv_protocol" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/s_75" android:text="@string/txt_protocol"/>
    <TextView android:textSize="@dimen/text_size_bigger" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_next" android:background="@drawable/shape_option" android:layout_width="match_parent" android:layout_height="@dimen/s_45" android:layout_marginLeft="@dimen/s_25" android:layout_marginTop="@dimen/s_15" android:layout_marginRight="@dimen/s_25" android:text="@string/txt_next"/>
</LinearLayout>
