<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <RelativeLayout android:id="@+id/lin_top" android:layout_width="match_parent" android:layout_height="@dimen/s_70">
            <ImageView android:id="@+id/iv_cancel" android:layout_width="@dimen/s_40" android:layout_height="@dimen/s_40" android:layout_marginTop="@dimen/s_22" android:layout_marginRight="@dimen/s_2" android:src="@mipmap/img_cancel" android:scaleType="centerInside" android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <TextView android:textSize="@dimen/t_25" android:textStyle="bold" android:textColor="@color/text_color_major" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:text="@string/txt_welcome"/>
        <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="@dimen/s_15" android:text="@string/txt_run_young"/>
        <com.zjwh.android_wh_physicalfitness.view.XEditText android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:textColorHint="@color/text_color_hint" android:id="@+id/edt_user_name" android:background="@null" android:paddingLeft="24dp" android:paddingTop="@dimen/s_5" android:paddingRight="24dp" android:paddingBottom="@dimen/s_5" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="25dp" android:hint="@string/hint_user_name" android:singleLine="true" android:maxLength="20"/>
        <View android:layout_marginLeft="24dp" android:layout_marginRight="24dp" style="@style/horizontal_line"/>
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:paddingLeft="24dp" android:paddingRight="24dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="25dp">
            <EditText android:textSize="@dimen/text_size_normal" android:textColor="@color/text_color_black" android:textColorHint="@color/text_color_hint" android:id="@+id/edt_psw" android:background="@null" android:paddingTop="@dimen/s_5" android:paddingBottom="@dimen/s_5" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/hint_psw" android:singleLine="true" android:maxLength="20" android:layout_weight="1" android:inputType="textPassword" style="?android:attr/textViewStyle"/>
            <ImageView android:id="@+id/iv_show_psw" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/show_password_selector" android:scaleType="center"/>
        </LinearLayout>
        <View android:layout_marginLeft="24dp" android:layout_marginRight="24dp" style="@style/horizontal_line"/>
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_color_hint" android:layout_gravity="right" android:id="@+id/tv_forget_psw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/s_20" android:layout_marginRight="@dimen/s_25" android:text="@string/txt_forget_psw"/>
        <TextView android:textSize="@dimen/text_size_bigger" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_login" android:background="@drawable/shape_option" android:layout_width="match_parent" android:layout_height="@dimen/s_45" android:layout_marginLeft="28dp" android:layout_marginTop="@dimen/s_68" android:layout_marginRight="28dp" android:text="@string/login"/>
        <TextView android:textSize="@dimen/text_size_bigger" android:textColor="@color/text_color_black" android:gravity="center" android:id="@+id/tv_register" android:background="@drawable/shape_login_create" android:layout_width="match_parent" android:layout_height="@dimen/s_45" android:layout_marginLeft="28dp" android:layout_marginTop="8dp" android:layout_marginRight="28dp" android:text="@string/register"/>
        <ViewStub android:id="@+id/debug_view" android:layout="@layout/host_change_view" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout android:id="@+id/mLyout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
</RelativeLayout>
