<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/lin_reload" android:background="@color/window_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/errorStateImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="120dp" android:src="@drawable/no_net_icon"/>
    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/sport_green" android:layout_gravity="center_horizontal" android:id="@+id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/txt_request_failure"/>
    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_color_hint" android:layout_gravity="center_horizontal" android:id="@+id/tv_check_network" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/txt_check_network"/>
    <TextView android:textSize="@dimen/text_size_normal" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/retry_btn" android:background="@drawable/sign_dialog_list_select_bg" android:layout_width="72dp" android:layout_height="40dp" android:layout_marginTop="32dp" android:text="@string/txt_reload"/>
</LinearLayout>
